--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-	"name": "test2",
-	"version": "1.0.0",
-	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web"
-	},
-	"dependencies": {
-		"expo": "~48.0.4",
-		"expo-font": "^11.1.1",
-		"expo-linking": "^4.0.1",
-		"expo-status-bar": "^1.4.4",
-		"nativewind": "^2.0.11",
-		"expo-router": "^1.2.1",
-		"react": "18.2.0",
-		"react-native": "0.71.3",
-		"react-native-safe-area-context": "^4.5.0",
-		"react-native-screens": "^3.20.0"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.20.0",
-		"@types/react": "~18.0.14",
-		"tailwindcss": "^3.2.7",
-		"typescript": "^4.9.4"
-	},
-	"private": true
+  "name": "fit-genius",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3",
+    "expo": "~48.0.5",
+    "expo-font": "^11.1.1",
+    "expo-linking": "^4.0.1",
+    "expo-router": "^1.2.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "^1.4.4",
+    "nativewind": "^2.0.11",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-date-picker": "^4.2.9",
+    "react-native-reanimated": "^3.0.1",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.14",
+    "@types/react-native": "^0.71.3",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.4"
+  },
+  "private": true
 }
