--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "date-fns": "^2.29.3",
     "expo": "~48.0.5",
     "expo-font": "^11.1.1",
@@ -15,16 +16,20 @@
     "expo-router": "^1.2.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
+    "lodash-es": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-hook-form": "^7.43.4",
     "react-native": "0.71.3",
     "react-native-date-picker": "^4.2.9",
     "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "zod": "^3.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.71.3",
     "tailwindcss": "^3.2.7",
