--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "update-types": "npx supabase gen types typescript --project-id \"rqavyroelmtspuxnybsz\" > app/shared/types/supabase.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@supabase/supabase-js": "^2.10.0",
+    "@tanstack/react-query": "^4.26.1",
+    "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "expo": "~48.0.5",
     "expo-font": "^11.1.1",
@@ -25,6 +30,7 @@
     "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-url-polyfill": "^1.3.0",
     "zod": "^3.21.0"
   },
   "devDependencies": {
@@ -32,6 +38,7 @@
     "@types/lodash-es": "^4.17.6",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.71.3",
+    "@types/uuid": "^9.0.1",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.4"
   },
