--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react": "18.2.0",
     "react-hook-form": "^7.43.4",
     "react-native": "0.71.3",
+    "react-native-big-calendar": "^3.4.1",
     "react-native-date-picker": "^4.2.9",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
@@ -43,6 +45,7 @@
     "@typescript-eslint/parser": "^5.54.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.36.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unicorn": "^46.0.0",
