--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "unused-imports/no-unused-imports": "warn",
     "react/react-in-jsx-scope": "off",
     "unicorn/no-null": "off",
+    "react/display-name": "off",
     "unicorn/prevent-abbreviations": [
       "error",
       {
