--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.43.4",
     "react-native": "0.71.3",
-    "react-native-big-calendar": "^3.4.1",
+    "react-native-calendars": "^1.1294.0",
     "react-native-date-picker": "^4.2.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-reanimated": "^3.0.1",
