--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@supabase/supabase-js": "^2.10.0",
     "@tanstack/react-query": "^4.26.1",
     "axios": "^1.3.4",
