--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.26.1",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "date-fns-tz": "^2.0.0",
     "expo": "~48.0.5",
     "expo-font": "^11.1.1",
     "expo-linking": "^4.0.1",
