refactor appointment - client relationship to 1:1

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,9 @@
       "error",
       {
         "replacements": {
+          "acc": {
+            "accumulator": false
+          },
           "props": {
             "properties": false
           },
