refactor agenda, timeline and component libraries

--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
       "package": "ogm.fitgenius"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     }
   }
 }
