--- a/package.json
+++ b/package.json
@@ -10,31 +10,40 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "^7.0.0",
     "@supabase/supabase-js": "^2.10.0",
-    "@tanstack/react-query": "^4.26.1",
-    "axios": "^1.3.4",
+    "@tamagui/animations-react-native": "^1.8.4",
+    "@tamagui/babel-plugin": "^1.8.4",
+    "@tamagui/config": "^1.8.4",
+    "@tamagui/font-inter": "^1.8.4",
+    "@tamagui/lucide-icons": "^1.8.4",
+    "@tamagui/theme-base": "^1.8.4",
+    "@tanstack/react-query": "^4.28.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
-    "expo": "~48.0.5",
+    "expo": "~48.0.9",
     "expo-font": "^11.1.1",
     "expo-linking": "^4.0.1",
     "expo-router": "^1.2.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
     "lodash-es": "^4.17.21",
-    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-hook-form": "^7.43.4",
-    "react-native": "0.71.3",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
+    "react-native": "0.71.4",
     "react-native-calendars": "^1.1294.0",
-    "react-native-date-picker": "^4.2.9",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-reanimated": "^3.0.1",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-url-polyfill": "^1.3.0",
+    "react-native-web": "^0.18.12",
+    "tamagui": "^1.8.4",
     "zod": "^3.21.0"
   },
   "devDependencies": {
@@ -46,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "^8.36.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
@@ -53,7 +63,6 @@
     "eslint-plugin-unicorn": "^46.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.4"
   },
   "private": true
