implement updating appointment time

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "unicorn/no-null": "off",
     "react/display-name": "off",
     "unicorn/no-array-reduce": "off",
+    "unicorn/no-nested-ternary": "off",
     "unicorn/prevent-abbreviations": [
       "error",
       {
