--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "^7.0.0",
     "@supabase/supabase-js": "^2.10.0",
-    "@tamagui/animations-react-native": "^1.8.4",
-    "@tamagui/babel-plugin": "^1.8.4",
-    "@tamagui/config": "^1.8.4",
-    "@tamagui/font-inter": "^1.8.4",
-    "@tamagui/lucide-icons": "^1.8.4",
-    "@tamagui/theme-base": "^1.8.4",
+    "@tamagui/animations-react-native": "^1.13.4",
+    "@tamagui/babel-plugin": "^1.13.4",
+    "@tamagui/config": "^1.13.4",
+    "@tamagui/font-inter": "^1.13.4",
+    "@tamagui/lucide-icons": "^1.13.4",
+    "@tamagui/theme-base": "^1.13.4",
     "@tanstack/react-query": "^4.28.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "date-fns": "^2.29.3",
@@ -41,9 +41,10 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "^0.18.12",
-    "tamagui": "^1.8.4",
+    "tamagui": "^1.13.4",
     "zod": "^3.21.0"
   },
   "devDependencies": {
