--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-router": "^1.2.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
+    "fuse.js": "^6.6.2",
     "lodash-es": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
